Closed Bug 346417 Opened 20 years ago Closed 20 years ago

RTL justify code is wrong in nsTextFrame

Categories

(Core :: Layout: Text and Fonts, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

(Keywords: rtl)

Attachments

(1 file, 1 obsolete file)

The RTL justify code is wrong. We should need to reset justification counter after calculating the frame width in nsTextFrame::PaintTextSlowly. And also the param of GetTextDimensions in nsTextFrame::PaintTextSlowly has wrong. The aIsEndOfFrame should be PR_TRUE instead of iter.IsLast().
Attached patch Patch rv1.0 (obsolete) — Splinter Review
But I have a question. Cannot we get frame width from |mRect.width| instead of |GetTextDimensions|??
Attachment #231224 - Flags: superreview?(roc)
Attachment #231224 - Flags: review?(roc)
Status: NEW → ASSIGNED
I think that this is enough and better. But I'm not sure.
Attachment #231226 - Flags: superreview?(roc)
Attachment #231226 - Flags: review?(roc)
Comment on attachment 231226 [details] [diff] [review] Patch rv1.0 (alternative) I think this is correct, just check with smontagu
Attachment #231226 - Flags: superreview?(roc)
Attachment #231226 - Flags: superreview+
Attachment #231226 - Flags: review?(smontagu)
Attachment #231226 - Flags: review?(roc)
Comment on attachment 231226 [details] [diff] [review] Patch rv1.0 (alternative) Looks good to me.
Attachment #231226 - Flags: review?(smontagu) → review+
checked-in to trunk.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Attachment #231224 - Attachment is obsolete: true
Attachment #231224 - Flags: superreview?(roc)
Attachment #231224 - Flags: review?(roc)
Mass-assigning the new rtl keyword to RTL-related (see bug 349193).
Keywords: rtl
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: