Bug 346417 RTL justify code is wrong in nsTextFrame r=smontagu, sr=roc